videos page styles, scrollbar fixes, etc

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,12 @@
 @import './styles/base';
 
+html {
+  @media (min-width: 769px) {
+    width:100vw;
+    overflow-x: hidden;
+  }
+}
+
 html,
 #root,
 body {
