--- a/src/components/logo/_logo.scss
+++ b/src/components/logo/_logo.scss
@@ -7,7 +7,7 @@
   background-size: contain;
   height: 30px;
   width: 100%;
-  transition: all 0.5s ease;
+  transition: all 0.35s ease;
   animation: fade-in 0.5s ease;
   // z-index: 1001;
 
