--- a/src/components/videos/_videos.scss
+++ b/src/components/videos/_videos.scss
@@ -7,14 +7,26 @@
   &__container {
     width: 100%;
     height: 100%;
-    @include flex(column, center, center);
+    @include flex(column, flex-start, center);
 
     @media (max-width: 768px) {
-      width: 100vw !important;
+      padding: 0 10px !important;
+      width: 95vw !important;
+    }
+
+    header {
+      width: 100%;
     }
 
     h2 {
-      align-self: flex-start;
+      width: 100%;
+      margin-top: 0 !important;
+      text-align: left !important;
+    }
+
+    h3 {
+      margin-top: 0;
+      margin-bottom: 10px;
     }
   }
 
